# gentlemanly_engine

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  actor_8hpp_source.html  actor__ticker__subsystem_8hpp_source.html  animation__actor_8hpp_source.html  annotated.html  appveyor.yml  asset_8hpp_source.html  asset__manager_8hpp_source.html  audio__subsystem_8hpp_source.html  build_emscripten.sh  build_emscripten_game.sh  camera__actor_8hpp_source.html  classes.html  classge_1_1actor-members.html  classge_1_1actor.html  classge_1_1animation__actor-members.html  classge_1_1animation__actor.html  classge_1_1asset__manager-members.html  classge_1_1asset__manager.html  classge_1_1material-members.html  classge_1_1material.html  classge_1_1material__asset-members.html  classge_1_1material__asset.html  classge_1_1mesh-members.html  classge_1_1mesh.html  classge_1_1mesh__asset-members.html  classge_1_1mesh__asset.html  classge_1_1rocket__render__interface-members.html  classge_1_1rocket__render__interface.html  classge_1_1rocket__system__interface-members.html  classge_1_1rocket__system__interface.html  (+195 more)
cmake/: android.cmake  emscripten.cmake  gentlemanly_engine-config.cmake  gentlemanly_engine.cmake
cmake/emscripten-modules/: FindBoost.cmake  FindBox2D.cmake  FindTinyObjLoader.cmake
cmake/modules/: FindEntityX.cmake  FindSDL2.cmake  FindTinyObjLoader.cmake  Findanax.cmake
doc/: COMPILING_WITH_EMSCRIPTEN.md  README.md  actor_interface.md  actors.md  asset.md  input.md  opening_window.md  remotes.txt  renderer.md  setup.md  subsystem.md  tutorial01.md  tutorial02.md
doc/doxygen/: Doxyfile.in
doc/json_spec/: material_asset.json  mesh_asset.json  mesh_settings_asset.json  rocket_document_asset.json  rocket_font_asset.json  shader_asset.json  shader_parameter.json  sound_asset.json  texture_asset.json
doc/tutorial/: asset.md  setup.md
doc/tutorials/: asset.md
embuild/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  build.ninja  cmake_install.cmake  rules.ninja
embuild/ge/: cmake_install.cmake  libgentlemanly_engine.bc
embuild/modules/: cmake_install.cmake
embuild/samples/: cmake_install.cmake
ge/: CMakeLists.txt
ge/include/ge/: actor.hpp  actor_ticker_subsystem.hpp  asset_manager.hpp  camera_actor.hpp  hash_typeindex.hpp  input_event.hpp  input_subsystem.hpp  json.hpp  json_helper.hpp  log.hpp  runtime.hpp  subsystem.hpp  tickable.hpp  timer_manager.hpp  timer_subsystem.hpp  transform.hpp
ge/include/ge/concept/: asset.hpp
ge/include/spdlog/details/: os.h
ge/include/spdlog/fmt/bundled/: format.h
ge/src/: actor.cpp  log.cpp
include/: animation_asset.hpp
include/ge/: actor.hpp  animation_asset.hpp  application.hpp  asset.hpp  asset_manager.hpp  audio_subsystem.hpp  camera.hpp  camera_actor.hpp  camera_component.hpp  collision.hpp  collision_body.hpp  collision_component.hpp  component_manager.hpp  entity.hpp  gl.hpp  hash_typeindex.hpp  input_consumer.hpp  input_event.hpp  input_layer.hpp  input_layer_component.hpp  input_subsystem.hpp  (+39 more)
licenses/: Assimp.txt  TinyObjLoader.txt
modules/: CMakeLists.txt
modules/audio/: CMakeLists.txt
modules/audio/include/ge/: audio_subsystem.hpp  sound.hpp  sound_actor.hpp  sound_asset.hpp
modules/audio/src/: audio_subsystem.cpp  sound.cpp  sound_actor.cpp  sound_asset.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/ge/: animation_actor.hpp  gl.hpp  material.hpp  material_asset.hpp  mesh.hpp  mesh_actor.hpp  mesh_asset.hpp  mesh_settings_asset.hpp  ortho2d.hpp  renderable.hpp  sdl_subsystem.hpp  shader.hpp  shader_asset.hpp  sound_cue.hpp  texture.hpp  texture_asset.hpp
modules/renderer/include/glad/: glad.h
modules/renderer/src/: glad.c  material.cpp  material_asset.cpp  mesh.cpp  mesh_actor.cpp  mesh_asset.cpp  mesh_settings.cpp  sdl_subsystem.cpp  shader.cpp  shader_asset.cpp  texture.cpp  texture_asset.cpp  tiny_obj_loader.cc
modules/rocket/: CMakeLists.txt
modules/rocket/include/ge/: render_interface.hpp  rocket_document_asset.hpp  rocket_font_asset.hpp  rocket_input_consumer.hpp  rocket_render_interface.hpp  rocket_subsystem.hpp  rocket_system_interface.hpp  system_interface.hpp
modules/rocket/src/: render_interface.cpp  rocket_document_asset.cpp  rocket_input_consumer.cpp  rocket_render_interface.cpp  rocket_subsystem.cpp
precompiled_emscripten_binaries/: libBox2D.bc  libboost_filesystem.bc  libboost_system.bc  libtinyobjloader.bc
samples/: CMakeLists.txt  gentlemanly_engine_opening_window.trace  grid.trace  log.txt
samples/audio/: CMakeLists.txt  main.cpp
samples/grid/: .main.cpp.swp  CMakeLists.txt  angledwall.hpp  base.hpp  beartrap.hpp  bullet.hpp  connector.hpp  damagable.hpp  event_manager.cpp  event_manager.hpp  grid.cpp  grid.hpp  grid_rocket_element.hpp  gridcamera.hpp  gridtick_interface.hpp  hud.cpp  hud.hpp  main.cpp  piece.cpp  piece.hpp  piece_serializer.cpp  piece_serializer.hpp  spike.hpp  statsmath.c  statsmath.h  ticktimer.hpp  toweractor.hpp  turret.cpp  turret.hpp  wall.cpp  wall.hpp  zombie.cpp  zombie.hpp  zombiespawner.hpp  zombieupgrade.hpp
samples/opening_window/: CMakeLists.txt  main.cpp
samples/rocket/: CMakeLists.txt  main.cpp
scripts/: build_emscripten_game.sh  compile_dependencies.sh  compile_dependencies_mingw.bat  compile_dependencies_vs.bat  format-code.sh  format_code.sh  upload_docs.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+21 more)
src/: actor.cpp  application.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp  window.cpp
(+177 files in other folders)
